Tried a delay to fix the ticker issues on mobile

--- a/src/app/shared/components/full-screen-ticker/full-screen-ticker.component.scss
+++ b/src/app/shared/components/full-screen-ticker/full-screen-ticker.component.scss
@@ -1,5 +1,3 @@
-$duration: 20s;
-
 .contents {
   width: 100%;
   height: 100%;
@@ -9,14 +7,11 @@ $duration: 20s;
   background-repeat: repeat-x;
   background-position-x: var(--image-width);
 
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-name: ticker;
-  -webkit-animation-duration: $duration;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-name: ticker;
-  animation-duration: $duration;
+  animation-duration: 20s;
+  animation-delay: 10ms;
 }
 
 @-webkit-keyframes ticker {
